force-app/main/default/objects/EquipmentReturnLineItem__c/EquipmentReturnLineItem__c.object-meta.xml
<CustomObject>
    <label>장비반납 상세</label>
    <nameField>
        <label>Equipment Return Line Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>