force-app/main/default/objects/EquipmentReturnLineItem__c/fields/ChangeRequestLineItemId__c.field-meta.xml
<CustomField>
    <fullName>ChangeRequestLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request Line ID</label>
    <referenceTo>EquipmentRequestLineItem__c</referenceTo>
    <relationshipLabel>Equipment Return Line Item</relationshipLabel>
    <relationshipName>Equipment_Return_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>