force-app/main/default/objects/EquipmentReturnLineItem__c/fields/EquipmentAssetId__c.field-meta.xml
<CustomField>
    <fullName>EquipmentAssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Asset ID</label>
    <referenceTo>EquipmentAsset__c</referenceTo>
    <relationshipLabel>Equipment Return Line Item</relationshipLabel>
    <relationshipName>Equipment_Return_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>