force-app/main/default/objects/EquipmentReturnLineItem__c/fields/ProcessingPlan__c.field-meta.xml
<CustomField>
    <fullName>ProcessingPlan__c</fullName>
    <label>Processing Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
            <value>
                <fullName>Salvage</fullName>
            </value>
            <value>
                <fullName>Restock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>