force-app/main/default/objects/EquipmentReturnLineItem__c/fields/QuantityExpected__c.field-meta.xml
<CustomField>
    <fullName>QuantityExpected__c</fullName>
    <label>Quantity Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>