force-app/main/default/objects/EquipmentReturnLineItem__c/fields/QuantityReceived__c.field-meta.xml
<CustomField>
    <fullName>QuantityReceived__c</fullName>
    <label>Quantity Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>