force-app/main/default/objects/EquipmentReturnLineItem__c/fields/QuantityRejected__c.field-meta.xml
<CustomField>
    <fullName>QuantityRejected__c</fullName>
    <label>Quantity Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>