force-app/main/default/objects/EquipmentReturnLineItem__c/fields/QuantityReturned__c.field-meta.xml
<CustomField>
    <fullName>QuantityReturned__c</fullName>
    <label>Quantity Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>