force-app/main/default/objects/EquipmentReturnLineItem__c/fields/ReasonForRejection__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRejection__c</fullName>
    <label>Reason for Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Item</fullName>
            </value>
            <value>
                <fullName>Missing Item or Part</fullName>
            </value>
            <value>
                <fullName>Wrong Item</fullName>
            </value>
            <value>
                <fullName>Expired Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>