force-app/main/default/objects/EquipmentReturnLineItem__c/fields/ReasonForReturn__c.field-meta.xml
<CustomField>
    <fullName>ReasonForReturn__c</fullName>
    <label>Reason For Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Duplicate Order</fullName>
            </value>
            <value>
                <fullName>Wrong Item</fullName>
            </value>
            <value>
                <fullName>Wrong Quantity</fullName>
            </value>
            <value>
                <fullName>Not Satisfied</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>