force-app/main/default/objects/EquipmentReturnLineItem__c/fields/RepaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>RepaymentMethod__c</fullName>
    <label>Repayment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>