force-app/main/default/objects/EquipmentReturnLineItem__c/fields/RequestLineItemId__c.field-meta.xml
<CustomField>
    <fullName>RequestLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Line ID</label>
    <referenceTo>EquipmentRequestLineItem__c</referenceTo>
    <relationshipLabel>Equipment Return Line Item (Request Line ID)</relationshipLabel>
    <relationshipName>Equipment_Return_Line_Item1</relationshipName>
    <type>Lookup</type>
</CustomField>