force-app/main/default/objects/EquipmentReturnLineItem__c/fields/ReturnId__c.field-meta.xml
<CustomField>
    <fullName>ReturnId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return ID</label>
    <referenceTo>EquipmentReturn__c</referenceTo>
    <relationshipLabel>Equipment Return Line Item</relationshipLabel>
    <relationshipName>Equipment_Return_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>