force-app/main/default/objects/EquipmentReturnLineItem__c/fields/ReturnLineItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ReturnLineItemNumber__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Return Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>