force-app/main/default/objects/EquipmentReturnLineItem__c/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <label>Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>